--- a/public/css/revico.css
+++ b/public/css/revico.css
@@ -1109,3 +1109,37 @@ trix-toolbar [data-trix-dialog] [data-trix-validate]:invalid {
     filter: grayscale(0%);
     transform: scale(1.05);
 }
+
+.btn-outline-primary {
+    color: #4a9dc5;
+    border-color: #4a9dc5;
+    background-color: transparent;
+    transition: all 0.3s ease;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #4a9dc5;
+    border-color: #4a9dc5;
+}
+
+.altura-linha {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card-hover {
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+  
+  .card-hover:hover {
+    transform: scale(1.05);
+}
+  
+.carousel-inner {
+    overflow: visible;
+  }
